# hschess

./: LICENSE  README.md  chesskel.cabal
chesskel/: board.hs  data.hs  gameplay.hs  movement.hs  test.hs
chesskel/Formats/: common.hs  fen.hs  pgn.hs
chesskel/Testing/: profiling.hs  test.hs
pgn/: nn-stamma-1737.pgn
src/: Chesskel.hs  chesskel.hs
src/Chesskel/: Board.hs  Formats.hs  Gameplay.hs  Movement.hs  Utils.hs  board.hs  formats.hs  gameplay.hs  movement.hs  utils.hs
src/Chesskel/Formats/: Common.hs  Fen.hs  Pgn.hs  San.hs  common.hs  fen.hs  pgn.hs  san.hs
src/Chesskel/Movement/: Minimal.hs
src/Chesskel/Testing/: profiling.hs  test.hs
tests/: Assertions.hs  ChessTestUtils.hs  Openings.hs  QuickCheckInstances.hs  Test.hs
tests/Test/Chesskel/: Board.hs  Gameplay.hs  Movement.hs
tests/Test/Chesskel/Formats/: Fen.hs  San.hs
