name:                chesskel
version:             0.1.0.0
synopsis:            A chess API for Haskell.
description:         Chesskel is an API that lets you play through a game of chess,
                     analyze available moves in a position, read/write games and
                     positions to external formats, etc.
license:             MIT
license-file:        LICENSE
author:              Magnus Grindal Bakken
maintainer:          magnusbakken@gmail.com
category:            Game
build-type:          Simple
stability:           alpha
cabal-version:       >=1.8
data-files:
  pgn/kasparov-topalov-1999.pgn
library
  hs-source-dirs:    src/
  ghc-options:       -O -Wall
  exposed-modules:
    Chesskel
    Chesskel.Board
    Chesskel.Movement
    Chesskel.Gameplay
    Chesskel.Formats
    Chesskel.Formats.Pgn
    Chesskel.Formats.Fen
    Chesskel.Formats.Common
  other-modules:
    Chesskel.Testing.Test
    Chesskel.Testing.Profiling
  build-depends:
      base       == 4.6.*
    , containers == 0.5.*
    , parsec     == 3.1.*
    , vector     == 0.10.*
  