name:                chesskel
version:             0.1.0.0
synopsis:            A chess API for Haskell.
description:         Chesskel is an API that lets you play through a game of chess,
                     analyze available moves in a position, read/write games and
                     positions to external formats, etc.
license:             MIT
license-file:        LICENSE
author:              Magnus Grindal Bakken
maintainer:          magnusbakken@gmail.com
category:            Game
build-type:          Simple
stability:           alpha
cabal-version:       >=1.8
data-files:
  pgn/kasparov-topalov-1999.pgn
  pgn/nn-stamma-1737.pgn
library
  hs-source-dirs:    src/
  ghc-options:       -O -Wall -fwarn-incomplete-patterns
  exposed-modules:
    Chesskel
    Chesskel.Board
    Chesskel.Movement
    Chesskel.Gameplay
    Chesskel.Formats
    Chesskel.Formats.Fen
    Chesskel.Formats.Pgn
    Chesskel.Formats.San
  other-modules:
    Chesskel.Formats.Common
    Chesskel.Testing.Test
    Chesskel.Testing.Profiling
    Chesskel.Utils
  build-depends:
      base       == 4.6.*
    , containers == 0.5.*
    , parsec     == 3.1.*
    , text       == 0.11.*
    , vector     == 0.10.*
  