name:                chesskel
version:             0.1.0.0
synopsis:            A chess API.
description:         Chesskel is an API that lets you play through a game of chess,
                     analyze available moves in a position, read/write games and
                     positions to external formats, etc.
license:             MIT
license-file:        LICENSE
author:              Magnus Grindal Bakken
maintainer:          magnusbakken@gmail.com
category:            Game
build-type:          Simple
stability:           alpha
cabal-version:       >=1.8
data-files:
  pgn/*.pgn
library
  hs-source-dirs:    src/, tests/
  ghc-options:       -O -Wall -fwarn-incomplete-patterns
  exposed-modules:
    Chesskel
    Chesskel.Board
    Chesskel.Movement
    Chesskel.Gameplay
    Chesskel.Formats
    Chesskel.Formats.Fen
    Chesskel.Formats.Pgn
    Chesskel.Formats.San
  other-modules:
    Chesskel.Formats.Common
    Chesskel.Testing.Profiling
    Chesskel.Utils
  build-depends:
      base       == 4.6.*
    , containers == 0.5.*
    , parsec     == 3.1.*
    , text       == 0.11.*
    , vector     == 0.10.*
test-suite chesskel-tests
  hs-source-dirs:   tests/
  ghc-options:      -Wall
  main-is:          Test.hs
  type:             exitcode-stdio-1.0
  other-modules:
    Test.Chesskel.Movement
    Test.Chesskel.Formats.Fen
  build-depends:
      base                 == 4.6.*
    , chesskel             == 0.1.0.0
    , HUnit                == 1.2.*
    , test-framework       == 0.8.*
    , test-framework-hunit == 0.3.*
